--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@fastify/cors": "^9.0.1",
     "@types/node": "^20.12.12",
     "fastify": "^4.27.0",
     "ts-node-dev": "^2.0.0"
