--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@prisma/client": "^5.15.0",
     "tsx": "^4.10.5",
-    "typescript": "^5.4.5",
-    "@prisma/client": "^5.15.0"
+    "typescript": "^5.4.5"
   },
   "dependencies": {
     "@fastify/cors": "^9.0.1",
     "@types/node": "^20.12.12",
     "fastify": "^4.27.0",
+    "fastify-type-provider-zod": "^2.0.0",
     "ts-node-dev": "^2.0.0",
     "zod": "^3.23.8"
   }
