--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
   },
   "dependencies": {
     "@fastify/cors": "^9.0.1",
+    "@fastify/swagger": "^8.14.0",
+    "@fastify/swagger-ui": "^3.0.0",
     "@types/node": "^20.12.12",
     "fastify": "^4.27.0",
     "fastify-type-provider-zod": "^2.0.0",
+    "glob": "^8.1.0",
     "ts-node-dev": "^2.0.0",
-    "zod": "^3.23.8",
-    "@fastify/swagger": "^8.14.0",
-    "@fastify/swagger-ui": "^3.0.0"
+    "zod": "^3.23.8"
   }
 }
