--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   },
   "dependencies": {
     "@fastify/cors": "^9.0.1",
+    "@fastify/jwt": "^8.0.1",
     "@fastify/swagger": "^8.14.0",
-    "@fastify/swagger-ui": "^3.0.0",
+    "@fastify/swagger-ui": "^4.0.0",
     "@types/node": "^20.12.12",
-    "fastify": "^4.27.0",
+    "fastify": "^4.28.1",
+    "fastify-swagger": "^5.2.0",
     "fastify-type-provider-zod": "^2.0.0",
-    "glob": "^8.1.0",
+    "openapi-types": "^12.1.3",
     "ts-node-dev": "^2.0.0",
     "zod": "^3.23.8"
   }
