--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^20.14.10",
     "bcrypt": "^5.1.1",
     "dayjs": "^1.11.11",
+    "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
     "fastify-type-provider-zod": "^2.0.0",
     "glob": "^10.4.3",
