adicionado a variavel Secret_key para começar a trabalhar com jwt

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
 DATABASE_URL=postgresql://postgres:programador@localhost:5432/testando?schema=public
+
+SECRET_KEY = "2rrj44u94jr9fj49349hfhfrifriijfj"
