--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "openapi-types": "^12.1.3",
     "rimraf": "^5.0.8",
     "ts-node-dev": "^2.0.0",
+    "tsup": "^8.1.2",
     "zod": "^3.23.8"
   }
 }
