--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "openapi-types": "^12.1.3",
     "rimraf": "^5.0.8",
     "ts-node-dev": "^2.0.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "tsup": "^8.0.2"
   }
 }
