--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@prisma/client": "^5.16.1",
     "@types/faker": "^6.6.9",
+    "tsup": "^8.0.2",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3"
   },
@@ -39,7 +40,6 @@
     "openapi-types": "^12.1.3",
     "rimraf": "^5.0.8",
     "ts-node-dev": "^2.0.0",
-    "zod": "^3.23.8",
-    "tsup": "^8.0.2"
+    "zod": "^3.23.8"
   }
 }
