--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "tsup src",
-    "seed": "ts-node-dev prisma/seed.ts"
+    "seed": "ts-node-dev prisma/seed.ts",
+    "start": "node dist/server.js"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
@@ -40,7 +41,6 @@
     "openapi-types": "^12.1.3",
     "rimraf": "^5.0.8",
     "ts-node-dev": "^2.0.0",
-    "tsup": "^8.1.2",
     "zod": "^3.23.8"
   }
 }
